# rust-tutorial

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  fix_closing_blocks.py  fix_code_blocks.py
.github/: FUNDING.yml
.github/workflows/: deploy.yml  links.yml  mdbook.yml  rust-ci.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: README.md  cargo-commands.md  cheatsheet.md  examples.md  resources.md
docs/src/appendix/exercises/: README.md  ch01-exercises.md  ch02-exercises.md  ch03-exercises.md  ch04-exercises.md  ch05-exercises.md  ch06-exercises.md  ch07-exercises.md  ch08-exercises.md  ch09-exercises.md  ch10-exercises.md  ch11-exercises.md  ch12-exercises.md  ch13-exercises.md  ch14-exercises.md  ch15-exercises.md  ch16-exercises.md  ch17-exercises.md  ch18-exercises.md  ch19-exercises.md  ch20-exercises.md
docs/src/appendix/quiz/: README.md  ch01-quiz.md  ch02-quiz.md  ch03-quiz.md  ch04-quiz.md  ch05-quiz.md  ch06-quiz.md  ch07-quiz.md  ch08-quiz.md  ch09-quiz.md  ch10-quiz.md  ch11-quiz.md  ch12-quiz.md  ch13-quiz.md  ch14-quiz.md  ch15-quiz.md  ch16-quiz.md  ch17-quiz.md  ch18-quiz.md  ch19-quiz.md  ch20-quiz.md
docs/src/ch01-getting-started/: 01-installation.md  02-hello-world.md  03-cargo-basics.md  README.md
docs/src/ch02-variables/: 01-mutability.md  02-data-types.md  03-constants.md  README.md
docs/src/ch03-functions/: 01-defining-functions.md  02-parameters.md  03-return-values.md  README.md
docs/src/ch04-control-flow/: 01-if-else.md  02-loops.md  03-match-basics.md  README.md
docs/src/ch05-ownership/: 01-what-is-ownership.md  02-move-clone.md  03-references.md  04-slices.md  README.md
docs/src/ch06-structs/: 01-defining-structs.md  02-methods.md  03-associated-functions.md  README.md
docs/src/ch07-enums/: 01-defining-enums.md  02-option.md  03-match.md  04-if-let.md  README.md
docs/src/ch08-collections/: 01-vectors.md  02-strings.md  03-hashmaps.md  README.md
docs/src/ch09-error-handling/: 01-panic.md  02-result.md  03-propagating.md  04-custom-errors.md  README.md
docs/src/ch10-generics-traits/: 01-generics.md  02-traits.md  03-trait-bounds.md  04-lifetimes.md  README.md
docs/src/ch11-modules/: 01-packages-crates.md  02-modules.md  03-paths.md  04-separating-files.md  README.md
docs/src/ch12-testing/: 01-unit-tests.md  02-integration-tests.md  03-test-organization.md  README.md
docs/src/ch13-iterators-closures/: 01-closures.md  02-iterators.md  03-iterator-methods.md  04-custom-iterators.md  README.md
docs/src/ch14-smart-pointers/: 01-box.md  02-rc.md  03-refcell.md  04-weak.md  README.md
docs/src/ch15-concurrency/: 01-threads.md  02-message-passing.md  03-shared-state.md  04-sync-send.md  README.md
docs/src/ch16-async/: 01-async-basics.md  02-futures.md  03-tokio.md  04-async-patterns.md  README.md
docs/src/ch17-unsafe/: 01-unsafe-intro.md  02-raw-pointers.md  03-unsafe-functions.md  04-safe-abstractions.md  README.md
docs/src/ch18-macros/: 01-declarative.md  02-procedural.md  03-common-macros.md  README.md
docs/src/ch19-web-development/: 01-web-intro.md  02-axum-basics.md  03-api-example.md  04-database.md  README.md
docs/src/ch20-final-project/: 01-project-overview.md  02-design.md  03-implementation.md  04-review.md  README.md
docs/theme/: custom.css  custom.js
examples/: async_await.rs  collections.rs  concurrency.rs  error_handling.rs  generics_traits.rs  hello_world.rs  iterators.rs  ownership.rs  smart_pointers.rs  structs_enums.rs  web_server.rs
